<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/theater_sits"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/appBG">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#CCCCCC"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/title_sits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/appBG"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/select_your_seat_s"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/ticketsTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_sits"
            android:gravity="center">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tabel_fade"
                android:columnCount="4"
                android:rowCount="2">

                <TextView
                    android:id="@+id/totalPriceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/total_price" />

                <TextView
                    android:id="@+id/ticketPriceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/ticket_price" />

                <TextView
                    android:id="@+id/selectedSeatsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/selected_seats" />

                <TextView
                    android:id="@+id/totalTicketsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/total_tickets" />

                <TextView
                    android:id="@+id/totalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_0dollar" />

                <TextView
                    android:id="@+id/ticketPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_5dollar" />

                <TextView
                    android:id="@+id/selectedSeats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/totalTickets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_0" />
            </GridLayout>
        </RelativeLayout>


        <ImageView
            android:id="@+id/screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ticketsTexts"
            android:src="@drawable/screen" />

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passage3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <ToggleButton
                android:id="@+id/tBtn1"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_1"
                android:textOn="@string/_1" />

            <ToggleButton
                android:id="@+id/tBtn2"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_2"
                android:textOn="@string/_2" />

            <ToggleButton
                android:id="@+id/tBtn3"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_3"
                android:textOn="@string/_3" />

            <ToggleButton
                android:id="@+id/tBtn4"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_4"
                android:textOn="@string/_4" />

            <ToggleButton
                android:id="@+id/tBtn5"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_5"
                android:textOn="@string/_5" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/row1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <ToggleButton
                android:id="@+id/tBtn6"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_6"
                android:textOn="@string/_6" />

            <ToggleButton
                android:id="@+id/tBtn7"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_7"
                android:textOn="@string/_7" />

            <ToggleButton
                android:id="@+id/tBtn8"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_8"
                android:textOn="@string/_8" />

            <ToggleButton
                android:id="@+id/tBtn9"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_9"
                android:textOn="@string/_9" />

            <ToggleButton
                android:id="@+id/tBtn10"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_10"
                android:textOn="@string/_10" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/row3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passage1"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <ToggleButton
                android:id="@+id/tBtn11"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_11"
                android:textOn="@string/_11" />

            <ToggleButton
                android:id="@+id/tBtn12"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_margin="10dp"
                android:layout_toRightOf="@id/tBtn11"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_12"
                android:textOn="@string/_12" />

            <ToggleButton
                android:id="@+id/tBtn13"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_margin="10dp"
                android:layout_toRightOf="@id/tBtn12"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_13"
                android:textOn="@string/_13" />

            <ToggleButton
                android:id="@+id/tBtn14"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_margin="10dp"
                android:layout_toRightOf="@id/tBtn13"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_14"
                android:textOn="@string/_14" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/row3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <ToggleButton
                android:id="@+id/tBtn15"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_15"
                android:textOn="@string/_15" />

            <ToggleButton
                android:id="@+id/tBtn16"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_16"
                android:textOn="@string/_16" />

            <ToggleButton
                android:id="@+id/tBtn17"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_17"
                android:textOn="@string/_17" />

            <ToggleButton
                android:id="@+id/tBtn18"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/sit_button"
                android:textColor="@color/white"
                android:textOff="@string/_18"
                android:textOn="@string/_18" />

        </LinearLayout>

        <TextView
            android:id="@+id/passage3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/screen"
            android:layout_marginTop="-15dp"
            android:gravity="center"
            android:text="@string/passage" />

        <TextView
            android:id="@+id/passage1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/row2"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/passage" />

        <TextView
            android:id="@+id/passage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passage1"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="-10dp"
            android:rotation="90"
            android:text="@string/passage" />

        <TextView
            android:id="@+id/row1_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/row1"
            android:layout_marginStart="350dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/_1" />

        <TextView
            android:id="@+id/row2_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/row2"
            android:layout_marginStart="350dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/_2" />

        <TextView
            android:id="@+id/row3_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/row3"
            android:layout_marginStart="320dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/_3" />

        <TextView
            android:id="@+id/row4_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/row4"
            android:layout_marginStart="320dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/_4" />

        <TextView
            android:id="@+id/entrance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/row3"
            android:layout_marginStart="10dp"
            android:text="@string/entrance"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/takenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/row4"

            android:layout_marginStart="15dp"
            android:text="@string/taken" />

        <TextView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignBottom="@id/takenText"
            android:layout_marginStart="13dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@id/takenText"
            android:background="@color/sitTaken" />

        <TextView
            android:id="@+id/aviableText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/takenText"
            android:layout_marginStart="15dp"
            android:text="@string/aviable" />

        <TextView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignBottom="@+id/aviableText"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@id/aviableText"
            android:background="@color/appBG" />

    </RelativeLayout>
</RelativeLayout>